manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    app.kubernetes.io/version: "v1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: users
    spec:
      containers:
        - name: users
          image: "bpsnifer/lesson-5-hw-users:v1"
          ports:
            - name: srvport
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /health
              port: srvport
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /health
              port: srvport
