manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    app.kubernetes.io/version: "v1"
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: users
