manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    app.kubernetes.io/version: "v1"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: users
              servicePort: 8080
